--- a/index-en.html
+++ b/index-en.html
@@ -60,19 +60,19 @@
                 <div class="hide-menu a-nav-toggle"></div>
                 <div class="menu">
                     <div class="menu-lang">
-                        <a href="#" class="menu-lang-item active">ไทย</a>
-                        <a href="#" class="menu-lang-item">อังกฤษ</a>
+                        <a href="#" class="menu-lang-item active">TH</a>
+                        <a href="#" class="menu-lang-item">ENG</a>
                     </div>
                     <div class="menu-main mt-100" id="accordion">
                         <ul id="menuMain">
-                            <li data-menuanchor="About" class="active"><a href="#About">เกี่ยวกับฉัน</a></li>
-                            <li data-menuanchor="Services"><a href="#Services">ไลท์สไตล์</a></li>
-                            <li data-menuanchor="Skills"><a href="#Skills">ทักษะพิเศษ</a></li>
-                            <li data-menuanchor="Resume"><a href="#Resume">การศึกษา</a></li>
-                            <!--<li data-menuanchor="Portfolio"><a href="#Portfolio">Portfolio</a></li>
-                            <li data-menuanchor="Testimonials"><a href="#Testimonials">Testimonials</a></li>-->
-                            <li data-menuanchor="Weapons"><a href="#Weapons">ผลงาน</a></li>
-                            <li data-menuanchor="Contact"><a href="#Contact">ติดต่อ</a></li>
+                            <li data-menuanchor="About" class="active"><a href="#About">About</a></li>
+                            <li data-menuanchor="Services"><a href="#Services">Services</a></li>
+                            <li data-menuanchor="Skills"><a href="#Skills">Skills</a></li>
+                            <li data-menuanchor="Resume"><a href="#Resume">Resume</a></li>
+                            <li data-menuanchor="Portfolio"><a href="#Portfolio">Portfolio</a></li>
+                            <li data-menuanchor="Testimonials"><a href="#Testimonials">Testimonials</a></li>
+                            <li data-menuanchor="Weapons"><a href="#Weapons">Weapons</a></li>
+                            <li data-menuanchor="Contact"><a href="#Contact">Contact</a></li>
                         </ul>
                     </div>
                     <div class="menu-ornament"></div>
@@ -86,7 +86,7 @@
                         <div class="container">
                             <div class="number-email-cv">
                                 <ul class="number-email">
-                                    <li>โทรศัพท์: (+66)92-757-8661</li>
+                                    <li>โทรศัพท์: Call me (+66)92-757-8661</li>
                                     <li>อีเมล: 31926@ds.ac.th</li>
                                 </ul>
                                     <li><a href="index.html">ไทย</a> | <a href="index-ex.html">อังกฤษ</a></li>
@@ -129,19 +129,19 @@
                                 <div class="col-lg-7">
                                     <div class="service-image animate-element delay4 fadeInUp">
                                         <span class="sub-title mb-75">ไลท์สไตล์</span>
-                                        <div class="Lifestyle-inner-images">
-                                            <img src="assets/images/lifestyle/TOEY3.png" alt="Service">
-                                            <img class="shape-one animate-element delay6 bounceIn" src="assets/images/lifestyle/shape-one-dark.png" alt="shape">
-                                            <img class="shape-one animate-element delay6 bounceIn" src="assets/images/lifestyle/shape-two-dark.png" alt="shape">
+                                        <div class="service-inner-images">
+                                            <img src="assets/images/services/TOEY2.png" alt="Service">
+                                            <img class="shape-one animate-element delay6 bounceIn" src="assets/images/services/shape-one-dark.png" alt="shape">
+                                            <img class="shape-two animate-element delay8 bounceIn" src="assets/images/services/shape-two-dark.png" alt="shape">
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-5">
                                     <div class="service-content pt-100 rpt-55 animate-element delay5 fadeInUp">
                                         <div class="section-title mb-25">
-                                            <h2 class="slide-title animate-element delay5 fadeInUp">กิจกรรมพักผ่อน<span class="text-typed a-typed a-typed-services" data-text="ในวันหยุด"></span>ในชีวิตประจำวันทั่วไป</h2>
+                                            <h2 class="slide-title animate-element delay5 fadeInUp">กิจกรรมพักผ่อน<span class="text-typed a-typed a-typed-services" data-text="ในวันหยุด"></span>ให้มีความสุข</h2>
                                         </div>
-                                        <p class="animate-element delay6 fadeInUp">โปรดปราณ การดำเนินชีวิตแบบไลท์สไตล์ ตามธรรมชาติ ธรรมดาๆ แบบชิวๆ <b>ไม่หรูหรา แต่เรียบง่าย</b></p>
+                                        <p class="animate-element delay6 fadeInUp">การดำเนินชีวิตแบบสบายๆ ธรรมดาๆ ง่ายๆ <b>ให้สนุก</b></p>
                                         <div class="our-services animate-element delay8 fadeInUp">
                                             <div class="service-item">
                                                 <div class="icon">
@@ -228,7 +228,7 @@
                                 <div class="col-lg-7">
                                     <div class="skill-image pt-55 text-lg-right animate-element delay4 fadeInUp">
                                         <div class="skill-images-inner">
-                                            <img src="assets/images/skills/TOEY4.png" alt="Skills">
+                                            <img src="assets/images/skills/skills-dark.png" alt="Skills">
                                             <img class="shape-one animate-element delay6 bounceIn" src="assets/images/skills/shape-one.png" alt="shape">
                                             <img class="shape-two animate-element delay8 bounceIn" src="assets/images/skills/shape-two-dark.png" alt="shape">
                                         </div>
@@ -329,22 +329,22 @@
                             </div>
                             <div class="portfolio-wrap">
                                 <div class="portfolio-item animate-element delay11 fadeInUp">
-                                    <img src="assets/images/portfolio/portfolio1.png" alt="Portfolio">
+                                    <img src="assets/images/acitivities/portfolio1.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item animate-element delay13 fadeInUp">
-                                    <img src="assets/images/portfolio/portfolio2.png" alt="Portfolio">
+                                    <img src="assets/images/acitivities/portfolio2.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio3.png" alt="Portfolio">
+                                    <img src="assets/images/acitivities/portfolio1.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio4.png" alt="Portfolio">
+                                    <img src="assets/images/acitivities/portfolio2.png" alt="Portfolio">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!--div class="section pp-scrollable slide slide-testimonials slide-light a-slide-typed" data-name="testimonials">
+                <div class="section pp-scrollable slide slide-testimonials slide-light a-slide-typed" data-name="testimonials">
                     <div class="slide-container">
                         <div class="container">
                             <div class="row align-items-end">
@@ -372,8 +372,8 @@
                             </div>
                         </div>
                     </div>
-                </div-->
-                <!--div class="section pp-scrollable slide slide-weapons a-slide-typed" data-name="weapons">
+                </div>
+                <div class="section pp-scrollable slide slide-weapons a-slide-typed" data-name="weapons">
                     <div class="slide-container">
                         <div class="container">
                            <div class="row align-items-center">
@@ -418,10 +418,10 @@
                             </div>
                         </div>
                     </div>
-                </div-->
-                <div class="section pp-scrollable slide slide-contact slide-light"-->
+                </div>
+                <div class="section pp-scrollable slide slide-contact slide-light">
                     <div class="slide-container">
-                        <!--div class="container">
+                        <div class="container">
                            <div class="contact-wrap mb-185 rmb-95">
                                <div class="row align-items-end">
                                     <div class="col-lg-7">
@@ -450,23 +450,23 @@
                                         </div>
                                     </div>
                                 </div>
-                           </div-->
+                           </div>
                            <div class="footer-contact text-center mb-35">
                                <div class="section-title mb-30 animate-element delay8 fadeInUp">
-                                   <h2>ช่องทางการติดต่อ สื่อสาร</h2>
+                                   <h2>Stay Connected</h2>
                                </div>
-                               <span class="country list-inline-item animate-element delay9 fadeInUp">ศรีราชา, ชลบุรี</span>
-                               <h3 class="animate-element delay6 fadeInUp">31926@ds.ac.th</h3>
-                               <h4 href="callto:(+778)675-0765" class="number list-inline-item animate-element delay10 fadeInUp">(+66)92-757-8661</h4>
-                               <!--div class="social-style-two mt-25 animate-element delay11 fadeInUp">
+                               <span class="country list-inline-item animate-element delay9 fadeInUp">Bangladesh</span>
+                               <h3 class="animate-element delay6 fadeInUp"><a href="mailto:hello_niharik@gmail.com">hello_niharik@gmail.com</a></h3>
+                               <a href="callto:(+778)675-0765" class="number list-inline-item animate-element delay10 fadeInUp">(+778) 675-0765</a>
+                               <div class="social-style-two mt-25 animate-element delay11 fadeInUp">
                                     <a href="#"><img src="assets/images/contact/social-dribbble.png" alt="Social"></a>
                                     <a href="#"><img src="assets/images/contact/social-behance.png" alt="Social"></a>
                                     <a href="#"><img src="assets/images/contact/social-instagram.png" alt="Social"></a>
-                                </div-->
+                                </div>
                            </div>
                         </div>
                         <div class="footer-bottom-girl animate-element delay12 zoomIn">
-                           <img src="assets/images/contact/contact.png" alt="footer girl">
+                           <img src="assets/images/contact/footer-bottom-girl.png" alt="footer girl">
                        </div>
                         <div class="footer-bottom-shape">
                             <img src="assets/images/contact/footer-bottom-shape.png" alt="Shape">
@@ -479,12 +479,12 @@
             <div class="progress-nav">
                 <ul id="menu">
                     <li data-menuanchor="About" class="active"></li>
-                    <li data-menuanchor="Lifestyle"></li>
+                    <li data-menuanchor="Services"></li>
                     <li data-menuanchor="Skills"></li>
                     <li data-menuanchor="Resume"></li>
                     <li data-menuanchor="Portfolio"></li>
-                    <!--li data-menuanchor="Testimonials"></li-->
-                    <!--li data-menuanchor="Weapons"></li-->
+                    <li data-menuanchor="Testimonials"></li>
+                    <li data-menuanchor="Weapons"></li>
                     <li data-menuanchor="Contact"></li>
                 </ul>
             </div>
