--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
                                 <div class="col-xl-5 col-lg-6">
                                     <div class="counter-wrap rmb-15 animate-element delay9 fadeInUp">
                                         <div class="success-box">
-                                            <span class="count-text lass-than-ten" data-speed="3000" data-stop="7">0</span>
+                                            <span class="count-text lass-than-ten" data-speed="" data-stop="">0</span>
                                             <h6>Years of Experience</h6>
                                         </div>
                                         <div class="success-box">
-                                            <span class="count-text plus" data-speed="3000" data-stop="120">0</span>
+                                            <span class="count-text plus" data-speed="" data-stop="">0</span>
                                             <h6>Satisfied Clients</h6>
                                         </div>
                                     </div>
@@ -329,16 +329,16 @@
                             </div>
                             <div class="portfolio-wrap">
                                 <div class="portfolio-item animate-element delay11 fadeInUp">
-                                    <img src="assets/images/portfolio/portfolio1.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/toey4.jpg" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item animate-element delay13 fadeInUp">
-                                    <img src="assets/images/portfolio/portfolio2.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/toey5.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio3.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/toey6.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/portfolio4.png" alt="Portfolio">
+                                    <img src="assets/images/portfolio/toey7.png" alt="Portfolio">
                                 </div>
                             </div>
                         </div>
