--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <div class="hide-menu a-nav-toggle"></div>
                 <div class="menu">
                     <div class="menu-lang">
-                        <a href="#" class="menu-lang-item active">ไทย</a>
-                        <a href="#" class="menu-lang-item">อังกฤษ</a>
+                        <a href="index.html" class="menu-lang-item active">ไทย</a>
+                        <a href="index-en.html" class="menu-lang-item">อังกฤษ</a>
                     </div>
                     <div class="menu-main mt-100" id="accordion">
                         <ul id="menuMain">
@@ -89,7 +89,7 @@
                                     <li>โทรศัพท์: (+66)92-757-8661</li>
                                     <li>อีเมล: 31926@ds.ac.th</li>
                                 </ul>
-                                    <li><a href="index.html">ไทย</a> | <a href="index-ex.html">อังกฤษ</a></li>
+                                    <li><a href="index.html">ไทย</a> | <a href="index-en.html">อังกฤษ</a></li>
                             </div>
                             <div class="row align-items-center">
                                 <div class="col-lg-5">
@@ -311,10 +311,10 @@
                                             <h2 class="slide-title animate-element delay6 fadeInUp">ผลงานและเกียรติบัตรสำคัญสำหรับทำ<span class="text-typed a-typed a-typed-portfolio" data-text="พอร์ตศึกษาต่อ"></span></h2>
                                         </div>
                                         <p class="animate-element delay7 fadeInUp">รวมภาพกิจกรรมจิตอาสา จิตสาธารณะ วุฒิบัตร ผลงานด้านการอบรม<b><a href="#">และผลงานอื่นๆที่เกี่ยวข้อง</a></b></p>
-                                        <a href="blog.html" class="read-more mt-45 rmt-25 animate-element delay8 fadeInUp">Explore More <i class="fas fa-long-arrow-alt-right"></i></a>
+                                        <!--a href="blog.html" class="read-more mt-45 rmt-25 animate-element delay8 fadeInUp">Explore More <i class="fas fa-long-arrow-alt-right"></i></a-->
                                     </div>
                                 </div>
-                                <div class="col-xl-5 col-lg-6">
+                                <!--div class="col-xl-5 col-lg-6">
                                     <div class="counter-wrap rmb-15 animate-element delay9 fadeInUp">
                                         <div class="success-box">
                                             <span class="count-text lass-than-ten" data-speed="" data-stop="">0</span>
@@ -325,20 +325,20 @@
                                             <h6>Satisfied Clients</h6>
                                         </div>
                                     </div>
-                                </div>
+                                </div-->
                             </div>
                             <div class="portfolio-wrap">
                                 <div class="portfolio-item animate-element delay11 fadeInUp">
-                                    <img src="assets/images/portfolio/toey4.jpg" alt="Portfolio">
+                                    <img src="assets/images/acitivities/t1.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item animate-element delay13 fadeInUp">
-                                    <img src="assets/images/portfolio/toey5.png" alt="Portfolio">
+                                    <img src="assets/images/acitivities/o2.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/toey6.png" alt="Portfolio">
+                                    <img src="assets/images/acitivities/e3.png" alt="Portfolio">
                                 </div>
                                 <div class="portfolio-item">
-                                    <img src="assets/images/portfolio/toey7.png" alt="Portfolio">
+                                    <img src="assets/images/acitivities/y4.png" alt="Portfolio">
                                 </div>
                             </div>
                         </div>
